Patch from Doug Vaughan to make folder.jpg generation optional in Jamu.  Thanks to Doug to being so receptive to other's feature requests.
git-svn-id: http://svn.mythtv.org/svn/trunk@21528 7dbf422c-18fa-0310-86e9-fd20926502f2

--- a/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
+++ b/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
@@ -10,6 +10,7 @@
 # Version: 0.3.2 - MythTv unicode URL's fixed and variable "min_poster_size" had '=' instead of ':'
 # Version: 0.3.3 - Regex string format change. Also obsolete variables removed.
 # Version: 0.3.4 - Added a IMDB variable as a second source parameter
+# Version: 0.3.5 - Added a folderart option to turn Jamu's creation of folder cover art on.
 #
 # License:Creative Commons GNU GPL v2
 # (http://creativecommons.org/licenses/GPL/2.0/)
@@ -70,6 +71,12 @@
 #                using ImageMagick's utility 'mogrify'. Default is no resizing (False).
 # (Options) False when no resizing. a percent size change e.g. 50%% smaller or widthxheight e,g, 1280x720
 #fanartresize: False
+
+# 'folderart' Changes in the MythVideo UI graphic hunts (cover art and fanart) have made Jamu's
+#             creation of "folder.xxx" graphics redundant. This feature has been turned off in Jamu.
+#             This user option reactivates this feature. Default is no folder cover art creation (False).
+# (Options) False Jamu will NOT create folder cover art; True Jamu will creating folder cover art
+#folderart: True
 
 # 'g_defaultname' downloaded graphics filename format. True means to use the same file name as 
 #                 on thetvdb.com wiki. Default is True. If this value is changed to False then either
