Multiple JAMU fixes.  Fixes two rare aborts.  Adds a default config file location of ~/.mythtv/jamu.conf. Fixes image downloads for items obtained w/ MiroBridge.  Avoids covart/fanart download for items in the 'Deleted' Recording Group.  Removes some now-unused code.
git-svn-id: http://svn.mythtv.org/svn/trunk@21897 7dbf422c-18fa-0310-86e9-fd20926502f2

--- a/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
+++ b/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
@@ -11,6 +11,7 @@
 # Version: 0.3.3 - Regex string format change. Also obsolete variables removed.
 # Version: 0.3.4 - Added a IMDB variable as a second source parameter
 # Version: 0.3.5 - Added a folderart option to turn Jamu's creation of folder cover art on.
+# Version: 0.3.6 - Added sections [mb_tv] and [mb_movies] for the -MW to get graphics for Miro videos.
 #
 # License:Creative Commons GNU GPL v2
 # (http://creativecommons.org/licenses/GPL/2.0/)
@@ -350,6 +351,61 @@
 [ep_name_massage]
 #24: PM," PM", AM, " AM",M-,"M - "
 # END   episode name massaging section --------------------------------------------------------------
+
+
+# START  additional graphics  section ---------------------------------------------------------------
+# By default mirobridge exclusively uses the Miro meta data and graphics (Channel icon or 
+# video icon and video screenshot), when adding a Miro video to either MythTV and MythVideo. 
+# In a very few instances there may be graphics (Posters, Banners and/or Fan art) that are available
+# and relevant to a Miro video. These instances consist of Movie Trailers and video casts for TV shows.
+# Recently some Vidcasts have been added to TVDB e.g. "HD Nation".
+# In these cases better quality metadata/graphics may be available from either themoviedb.com or
+# thetvdb.com
+# In this section:
+#     For TV shows you can specify a Channel name and thetvdb.com reference number. The TV series "Nova"
+#     "Nature" examples have been provided. 
+#     For movies just the Channel name is required plus the channels movie title delimiter character.
+#
+# When a Channel has been specified in either the Movie or TV sections Jamu's -MW option will check the
+# relevant source (themoviedb.com or thetvdb.com) for better graphics. If found they will be downloaded
+# and used in place of the lower quality Miro graphics. 
+# To utilize this feature the you must run the Jamu option -MW.
+#
+# The examples below are already activated. If you are not using Miro no additional processing happens.
+# The Channel names MUST be exactly as you have specified in
+# your Miro configuration. These examples may not match the Channel names in your Miro configuration.
+# For Movie trailers there will be a maximum of three attempts to find the correct movie. 
+# The first attempt will assume that the movie is to be released in the current year. If there is no 
+# match the second and third attempts will assume the movie will be released in the coming years. 
+#
+# To add more channels the format is always channel title then a ":"
+# Each Channel requires its own line, you cannot have multiple Channels per line.
+# NOTE: Do not surround any Channel name with quotes even if it contains spaces.
+#       e.g. the Channel name "HD-Trailers.net Blog" is expressed as value: HD-Trailers.net Blog
+# NOTE: For movies a movie title delimiter character must be specified. For example the subtitles for
+#       two movie trailer sites are listed below. The delimiter character is consistent for a channel:
+#       1) Timo's HD Movie Trailers: "Cirque Du Freak: The Vampire's Assistant - QuickTime Trailer"
+#          The delimeter character for the movie titles from Timo's is a "-"
+#       2) HD-Trailers.net Blog "Surrogates (Trailer 2)"
+#         The delimeter character for the movie titles from Trailer.net is a "("
+# 
+# The TV format is Channel name ":" then thetvdb.com reference number
+[mb_tv]
+NOVA Vodcast PBS: 76119
+NATURE PBS: 81157
+The Digg Reel: 81216
+ROFL: 110121
+Tekzilla HD: 80668
+Tekzilla Daily: 80668
+HD Nation: 104421
+The Onion News Network: 85342
+
+# The Movie format is Channel name ":" and movie title delimeter character(s)
+[mb_movies]
+Timo's HD Movie Trailers: -
+HD-Trailers.net Blog: (
+# END   additional graphics  section ---------------------------------------------------------------
+
 
 # START Secondary sources section--------------------------------------------------------------------
 # NOTE: This section is only active in conjunction with the Mythmetadata (-M) option
