--- a/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
+++ b/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
@@ -12,6 +12,10 @@
 # Version: 0.3.4 - Added a IMDB variable as a second source parameter
 # Version: 0.3.5 - Added a folderart option to turn Jamu's creation of folder cover art on.
 # Version: 0.3.6 - Added sections [mb_tv] and [mb_movies] for the -MW to get graphics for Miro videos.
+# Version: 0.3.7 - Prepopulated the following sections with values to help new users: 
+#                  "season/movie name overrides section", "episode name massaging section" and 
+#                  Miro additional graphics section". Also updated the docunentation for secondary
+#                  sources.
 #
 # License:Creative Commons GNU GPL v2
 # (http://creativecommons.org/licenses/GPL/2.0/)
@@ -133,7 +137,7 @@
 # "min_poster_size" is the minimum width size in pixels for a poster graphic. 
 #               If the current poster size is less than that then a replacement poster is downloaded. 
 # (Options) Default is 200 must be an integer.
-#min_poster_size: 200
+min_poster_size: 200
 
 # "mythtvdir" indicate that the poster, fanart, banner and episode image directories should be retrieved
 #             from the MythTV DB. To use this option the MythTV python interface must be installed and 
@@ -269,65 +273,69 @@
 # 2nd) The thetvdb.com series id (SID) or themoviedb.com imdb number as specified for the 
 #       series/movie on thetvdb.com or themoviedb.com wiki. This will override the series/movie 
 #       name to eliminate the need for manual interaction.  
-# NOTE: Included here, but disabled are examples of current (2009) TV shows that Schedule Direct
-#       has different TV series names then what is on thetvdb.com wiki. If you are searching for 
+# NOTE: Included here, are examples of current (2009) TV shows that Schedule Direct
+#       has different TV series names than what is on thetvdb.com wiki. If you are searching for 
 #       series based on the Schedule Direct names as MythTV does then the wrong TV series will be
 #       identified. You can pick the correct series by using interactive mode but this does not 
 #       help with unattended processing. This section allows you to specify the correct TV series
 #       on thetvbd.com despite the name in Schedule Direct. Luckily there are not many TV series
-#       That require overrides.
+#       that require overrides.
 #       The only time themoviedb.com is referenced is when the (-M) option is used and a 
-#       video files name does not having season and episode numbers. Those video files are
+#       video files name does not have season and episode numbers. Those video files are
 #       assumed to be movies. 
 #####
 [series_name_override] 
+# Schedule Direct vs thetvdb.com TV series naming differences
+The No. 1 Ladies' Detective Agency:81606
+
+Merlin:83123
+Merlin (2008):83123
+
+Defying Gravity:104581
+
+the forgotten:96891
+The Forgotten (2009):96891
+The Forgotten:96891
+
+House of Saddam:82624
+
 # Specify recorded "Life On Mars" shows as the US version  
-#Life on Mars:82289
-# For overnight episode updates when a filename is used
-#Life on Mars (US):82289
+Life on Mars:82289
+Life on Mars (US):82289
 
 # Specify recorded "Eleventh Hour" shows as the US version  
-#Eleventh Hour:83066
-# For overnight episode updates when a filename is used
-#Eleventh Hour (US):83066
+Eleventh Hour:83066
+Eleventh Hour (US):83066
 
 # Specify recorded "Frontline" or "Frontline/World" shows as the "Frontline PBS" version  
-#Frontline/World:80646
-#Frontline:80646
+Frontline/World:80646
+Frontline:80646
 
 # Specify recorded "The Beast" shows are the 2009 version  
-#The Beast:83805
-# For overnight episode updates when a filename is used
-#The Beast (2009):83805
+The Beast:83805
+The Beast (2009):83805
 
 # Specify recorded "Castle" shows are the 2009 version  
-#Castle:83462
-# For overnight episode updates when a filename is used
-#Castle (2009):83462
+Castle:83462
+Castle (2009):83462
 
+# Deal with movies that Jamu parses their filenames as TV series. Force the use of IMDB numbers
 # Deal with "Stargate SG-1" dash issue
-#Stargate SG-1:72449
+Stargate SG-1:72449
 
-# Deal with "Stargate SG-1" dash issue
-#Stargate SG-1:72449
+# Deal with "U-571" issue with filename parsing - Jamu considers the movie is a TV epsisode
+U:0141926
 
-# Deal with "U-571" issue with filename parsing - Jamu condsiders the movie is a TV epsisode
-#U:0141926
+# Deal with "Murder At 1600" issue with filename parsing - Jamu considers the movie is a TV epsisode
+Murder At:0119731
 
-# Deal with "Murder At 1600" issue with filename parsing - Jamu condsiders the movie is a TV epsisode
-#Murder At:0119731
-
-# Specify "House of Saddam"
-#House of Saddam:82624
-
+# Deal with collection specific issues. These files should be renamed instead. These are just examples.
 # Force picking up the 1992 version of the movie
-#Dracula:0103874
+Dracula:0103874
 
 # Force picking up the 1956 version of the movie
-#Moby Dick:0049513
+Moby Dick:0049513
 
-# Schedule Direct vs thetvdb.com TV Series naming differences
-#The No. 1 Ladies' Detective Agency:81606
 # END   season name overrides section --------------------------------------------------------------
 
 # START episode name massaging section --------------------------------------------------------------
@@ -346,14 +354,15 @@
 #      the '"' double quotation characters. 
 #      E.g. "24": PM," PM", AM, " AM" will turn the episode name
 #      "Day 7: 11:00AM to 12:00PM" into "Day 7: 11:00 AM to 12:00 PM"
-#      This feature helps reduce or eliminates the need for manual interaction.  
+#      This feature helps reduce or eliminates the need for manual interaction. 
+# NOTE: At this time ONLY the TV Series 24 needs this option. Your collection may be different. 
 #####
 [ep_name_massage]
-#24: PM," PM", AM, " AM",M-,"M - "
+24: PM," PM", AM, " AM",M-,"M - "
 # END   episode name massaging section --------------------------------------------------------------
 
 
-# START  additional graphics  section ---------------------------------------------------------------
+# START  Miro additional graphics section -----------------------------------------------------------
 # By default mirobridge exclusively uses the Miro meta data and graphics (Channel icon or 
 # video icon and video screenshot), when adding a Miro video to either MythTV and MythVideo. 
 # In a very few instances there may be graphics (Posters, Banners and/or Fan art) that are available
@@ -364,7 +373,8 @@
 # In this section:
 #     For TV shows you can specify a Channel name and thetvdb.com reference number. The TV series "Nova"
 #     "Nature" examples have been provided. 
-#     For movies just the Channel name is required plus the channels movie title delimiter character.
+#     For movie trailers just the Channel name is required plus the channels movie title delimiter
+#     character.
 #
 # When a Channel has been specified in either the Movie or TV sections Jamu's -MW option will check the
 # relevant source (themoviedb.com or thetvdb.com) for better graphics. If found they will be downloaded
@@ -387,24 +397,42 @@
 #       1) Timo's HD Movie Trailers: "Cirque Du Freak: The Vampire's Assistant - QuickTime Trailer"
 #          The delimeter character for the movie titles from Timo's is a "-"
 #       2) HD-Trailers.net Blog "Surrogates (Trailer 2)"
-#         The delimeter character for the movie titles from Trailer.net is a "("
+#         The delimeter character for the movie titles from HD-Trailer.net is a "("
 # 
 # The TV format is Channel name ":" then thetvdb.com reference number
 [mb_tv]
+# Real TV show equivelents to these Vidcasts
 NOVA Vodcast PBS: 76119
 NATURE PBS: 81157
-The Digg Reel: 81216
+
+# Revision3 Vidcasts
+CO-OP: 85446
+COOP: 85446
+Diggnation: 79013
+Epic Fu: 82479
+HD Nation: 104421
+iFanboy:81988
+Internet Superstar: 81447
+PixelPerfect: 81217
+Revision3: 79935
 ROFL: 110121
+Scam School: 81733
+Social Brew: 81986
 Tekzilla HD: 80668
 Tekzilla Daily: 80668
-HD Nation: 104421
-The Onion News Network: 85342
+The GigaOm Show: 81987
+The Totally Rad Show: 80140
+XLR8R TV: 82039
 
-# The Movie format is Channel name ":" and movie title delimeter character(s)
+# Other Vidcasts
+The Onion News Network: 85342
+The Digg Reel: 81216
+
+# The Movie trailer format is Channel name ":" and movie title delimeter character(s)
 [mb_movies]
 Timo's HD Movie Trailers: -
 HD-Trailers.net Blog: (
-# END   additional graphics  section ---------------------------------------------------------------
+# END   Miro additional graphics section -----------------------------------------------------------
 
 
 # START Secondary sources section--------------------------------------------------------------------
@@ -433,13 +461,16 @@ HD-Trailers.net Blog: (
 # %%(imdb)s         - Specifies an IMDB number whether or not the inetref is already an IMDB number. 
 #                     This variable is required as in most cases the inetref will be a TMDB number but
 #                     most secondary sources still require an IMDB number. NOTE: Despite the source
-#                     of the graphics files the naming convention is always "inetref.ext"
-# %%(name)s         - This can be a TV series name or movie name.
-# %%(subtitle)s     - This is usually a TV series episode name
-# %%(season)d       - This is a TV series season number
-# %%(episode)d      - This is a TV series episode number
+#                     of the graphics files the naming convention is always "inetref.ext". This value
+#                     is exclusive to what Jamu assumes is a movie file after parsing the video file
+#                     name. It cannot be used for TV series secondary source.
+# %%(file_seriesname)s - This can be a TV series name or movie name.
+# %%(subtitle)s     - This is usually a TV series episode name (Not included for movies)
+# %%(seasno)d       - This is a TV series season number
+# %%(epno)d    		- This is a TV series episode number
 # %%(filename)s     - This is the video file name as found on your computer
-# %%(fullfilename)s - This is the fully qualified video path and filename (mainly for user scripts) 
+# %%(filepath)s 	- This is the fully qualified video path (mainly for user scripts) 
+# %%(ext)s 			- This is the video file extention (e.g. "mkv") with no "." 
 #
 # The secondary sources are split into a movie section and a TV series section.
 # Tv series are defined as any video file names that contain season and episode numbers.
@@ -451,6 +482,8 @@ HD-Trailers.net Blog: (
 #            If you add a 'banner' key to the movie section it will be ignored.
 # metadate - The video file's text description e.g. plot, director ... etc
 #
+# NOTE: At this time there is no TV Secondary source scripts available unless you write your own.
+#       
 [movies-secondary-sources]
 #poster: /usr/local/share/mythtv/mythvideo/scripts/fetch_poster.py -P %%(imdb)s
 #fanart: 
