--- a/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
+++ b/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
@@ -319,6 +319,9 @@ The Beast (2009):83805
 Castle:83462
 Castle (2009):83462
 
+# The Daily Show = The Daily Show with Jon Stewart
+The Daily Show With Jon Stewart:71256
+
 # Deal with movies that Jamu parses their filenames as TV series. Force the use of IMDB numbers
 # Deal with "Stargate SG-1" dash issue
 Stargate SG-1:72449
