Update the jamu and ttvdb conf files with workarounds for the upcoming 'V' remake.
git-svn-id: http://svn.mythtv.org/svn/trunk@22639 7dbf422c-18fa-0310-86e9-fd20926502f2

--- a/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
+++ b/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
@@ -325,6 +325,10 @@ The Daily Show With Jon Stewart:71256
 # Deal with "Stargate SG-1" dash issue
 Stargate SG-1:72449
 
+# "V" Remake is going to be common soon.
+V:94971
+V (2009):94971
+
 # Deal with "U-571" issue with filename parsing - Jamu considers the movie is a TV epsisode
 U:0141926
 
