--- a/mythplugins/mythvideo/mythvideo/scripts/ttvdb/ttvdb-example.conf
+++ b/mythplugins/mythvideo/mythvideo/scripts/ttvdb/ttvdb-example.conf
@@ -58,6 +58,10 @@
 # For overnight episode updates when a filename is used
 #Castle (2009):83462
 
+# "V" Remake is going to be common soon.
+#V:94971
+#V (2009):94971
+
 # Specify recorded "Battlestar Galactica" shows are the 2003 version  
 #Battlestar Galactica:73545
 # For overnight episode updates when a filename is used
