--- a/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
+++ b/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
@@ -214,6 +214,13 @@ min_poster_size: 200
 # (Options) True or False
 #toprated: False
 
+# 'translate' String translations used in place of English 'Season' and 'Episode' literals used when
+#			 parsing a directory folder for TV Series, season and episode numbers.
+#			 Default is English 'Season' and 'Episode'. e.g. the German strings would be 'Staffel' and 'Folge'
+# (Options) Two comma seperated stings in the order Season then Episode literals.
+# NOTE: See this link for supported path/file name formats: http://www.mythtv.org/wiki/MythVideo_File_Parsing
+#translate: Staffel,Folge
+
 # 'tmdb_genre_filter' indicates which genres you want included from those provided by themoviedb.com
 #                     The data with the key "Genres:" is a
 #                     mish-mash of information. The values supplied here restricts what would be
