Update scripts for use with rewritten python bindings.  JAMU updates thanks to Doug Vaughan.
git-svn-id: http://svn.mythtv.org/svn/trunk@23289 7dbf422c-18fa-0310-86e9-fd20926502f2

--- a/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
+++ b/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
@@ -18,6 +18,8 @@
 #                  sources.
 # Version: 0.3.8 - Added the 'filename_char_filter' variable to allow additional characters to be replaced
 #				   by a '_' in file names.
+# Version: 0.3.9 - Removed the folderart option as that functionality is redundant with MythVideo
+#                  Removed the reference to imdbpy.py as that script has been removed from MythTV distro.
 #
 # License:Creative Commons GNU GPL v2
 # (http://creativecommons.org/licenses/GPL/2.0/)
@@ -91,12 +93,6 @@
 #           Default: /%\000		The last \000 is the representation of a null character
 # (Options) characters that will be added to the Default filter characters.
 #filename_char_filter: \:*?"<>|
-
-# 'folderart' Changes in the MythVideo UI graphic hunts (cover art and fanart) have made Jamu's
-#             creation of "folder.xxx" graphics redundant. This feature has been turned off in Jamu.
-#             This user option reactivates this feature. Default is no folder cover art creation (False).
-# (Options) False Jamu will NOT create folder cover art; True Jamu will creating folder cover art
-#folderart: True
 
 # 'g_defaultname' downloaded graphics filename format. True means to use the same file name as
 #                 on thetvdb.com wiki. Default is True. If this value is changed to False then either
@@ -468,7 +464,7 @@ HD-Trailers.net Blog: (
 # Secondary source requirements:
 # 1) A secondary source must have a command line interface such as "fetch_poster.py".
 # 2) The format of the returned values (through stdout) must match that of the existing grabber
-#    scripts such as tmdb.pl and ttvdb.py.
+#    scripts such as tmdb.pl, tmdb.py and ttvdb.py.
 # 3) You must specify the fully qualified name of the secondary source (path and filename)
 # 4) You must specify the command line switches that the secondary source requires to get specific data
 # 5) You must specify the dynamic data required by the secondary sources. Dynamic data is from a
@@ -511,7 +507,7 @@ HD-Trailers.net Blog: (
 [movies-secondary-sources]
 #poster: /usr/local/share/mythtv/mythvideo/scripts/fetch_poster.py -P %%(imdb)s
 #fanart:
-#metadata: /usr/local/share/mythtv/mythvideo/scripts/imdbpy.py -D %%(imdb)s
+#metadata: /usr/local/share/mythtv/mythvideo/scripts/??????.py -D %%(imdb)s
 
 [tv-secondary-sources]
 #poster:
