Updated ttvdb.py, tmdb.py, and jamu for the new API locations. Removes API from old locations.
Updates to ttvdb
1) Fixed cast name bad data abort reported in ticket #7957
2) Fixed ticket #7900 - There is now fall back graphics when a language is specified and there is no images for that specific language.
3) New default location and name of the ttvdb.conf file is '~/.mythtv/ttvdb.conf'. The command line option "-c" can still override the default location and name.


Updates to JAMU
1) Added a new option (-MR) to interactively populate the video reference numbers from
TVDB and TMDB without any meta data downloads. After that the user runs Jamu with the -M option
and the meta data and images are downloaded. This enhancement simplifies the mass update steps. Thanks go out to Yan Seiner for this suggestion.
2) Added to the interactive interface the ability to select a reference number of '99999999'
which effectively tells jamu to ignore the specific video from all further processing now and in the future.
3) Added a new jamu.conf section [ignore-directory] to list Video sub-directories that Jamu should
ignore. Those directories and their subdirectories will not be included in any Jamu processing.
4) Changed the return code from 1 to 0 when Jamu exits without processing if there is already an
instance of Jamu running. This was causing issues for Mythbuntu when TVDB or TMDB was down for an
extended period.
5) Change Jamu's import of tvdb and tmdb api libraries to use the installed versions found with the
MythTV python bindings.
6) Changed Jamu to use the tmdb API v2.0 python library
7) Jamu will always use the TMDB reference number over the IMDB number but still supports IMDB#s when TMDB does not have the movie.
8) Jamu interactive sessions for movies now lists the TMDB#s instead of IMDB#s for the TMDB site.
9) During any -M (maintenance) run Jamu will convert IMDB#s to TMDB#s when themoviedb.org includes that movie. This is in line with MythVideo changes. Graphics for th

--- a/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
+++ b/mythplugins/mythvideo/mythvideo/scripts/jamu-example.conf
@@ -20,6 +20,7 @@
 #				   by a '_' in file names.
 # Version: 0.3.9 - Removed the folderart option as that functionality is redundant with MythVideo
 #                  Removed the reference to imdbpy.py as that script has been removed from MythTV distro.
+# Version: 0.4.0 - Added a section to identify Video directories to be ignored by Jamu [ignore-directory]
 #
 # License:Creative Commons GNU GPL v2
 # (http://creativecommons.org/licenses/GPL/2.0/)
@@ -530,4 +531,16 @@ HD-Trailers.net Blog: (
 # series name is "foo", season number starts at "S" and episode number starts after '_'
 # foo_S01_12
 #regex01: ^(.+?)[ \._\-][Ss]([0-9]+)_([0-9]+)[^\\/]*$
+# END   regex section------------------------------------------------------------------------------
+
+# START ignore dirctory section--------------------------------------------------------------------
+# This section allows users to identify Video subdirectories that Jamu should ignore when processing.
+# These directories and the sub-directories will not have any of their video files processed.
+# The deirectories must be absolute paths relative paths will be ignored. Each directory path is preceeded
+# by a "ignoreXX:" value do not have duplicates as one of the duplicates will be ignored.
+# NOTE: Do not surround any of the directory paths with quotes even if they have spaces in the names
+# NOTE: Jamu does not validate that the directories you are valid on your system so make sure they are correct
+[ignore-directory]
+#ignore01: /path to/videos/to be ignored
+#ignore02: /path to/more videos/to be ignored
 # END   regex section------------------------------------------------------------------------------
