Fixes #7832. Applies patch with minor modifications. This change allows mythbackend to run as a specified user without a setuid binary when run as root.
And this allows upstart scripts to run mythtv as the proper user.

git-svn-id: http://svn.mythtv.org/svn/trunk@23521 7dbf422c-18fa-0310-86e9-fd20926502f2

--- a/mythtv/contrib/Linux/init_scripts/upstart.mythtv-backend.conf
+++ b/mythtv/contrib/Linux/init_scripts/upstart.mythtv-backend.conf
@@ -11,7 +11,7 @@ respawn
 
 script
         USER=mythtv
-        ARGS="--logfile /var/log/mythtv/mythbackend.log"
+        ARGS="--logfile /var/log/mythtv/mythbackend.log --user $USER"
         test -f /etc/default/mythtv-backend && . /etc/default/mythtv-backend || true
-        exec /bin/su -c "/usr/bin/mythbackend $ARGS" $USER
+        /usr/bin/mythbackend $ARGS
 end script
