--- a/mythtv/docs/doxygen-create-developer-docs.cfg
+++ b/mythtv/docs/doxygen-create-developer-docs.cfg
@@ -222,13 +222,14 @@ TAB_SIZE               = 8
 # the documentation. An alias has the form:
 # name=value
 # For example adding
-# "sideeffect=@par Side Effects:\n"
+# sideeffect="@par Side Effects:\n"
 # will allow you to put the command \sideeffect (or @sideeffect) in the
 # documentation, which will result in a user-defined paragraph with heading
 # "Side Effects:". You can put \n's in the value part of an alias to insert
 # newlines.
 
-ALIASES                = "sideeffect=\par Side Effects:\n"
+ALIASES                = sideeffect="\par Side Effects:\n"
+ALIASES                += qmlsignal="\par Signals Emitted:\n"
 
 # This tag can be used to specify a number of word-keyword mappings (TCL only).
 # A mapping has the form "name=value". For example adding "class=itcl::class"
