Add make 'cleanall' target to remove old moc_* and *.o files
This is a "bridge" target to help get people switched over to having
most of the generated files stored in sub-directories.  Its needed
because the Qt based makefiles contain an explicit list of all
generated files, and use that list in the 'clean' target.  If you
switch over to sub-directories without first doing a 'make clean', the
make system will no longer know about those old files and will no
longer know to remove them.  With this patch, a single 'make cleanall'
will remove all the old files and then you can forget all about the
'cleanall' target.

--- a/mythtv/Makefile
+++ b/mythtv/Makefile
@@ -23,7 +23,7 @@ SUBDIRS += $(MAKE_SUBDIRS) $(QT_SUBDIRS)
 	distclean $(addsuffix _distclean,$(SUBDIRS))  \
 	install   $(addsuffix _install,  $(SUBDIRS))  \
 	uninstall $(addsuffix _uninstall,$(SUBDIRS))  \
-	global tags TAGS \
+	global tags TAGS cleanold \
 	libs/libmythbase/version.h force
 
 all: libs/libmythbase/version.h subdirs
@@ -116,3 +116,7 @@ global GPATH GRTAGS GTAGS:
 	@echo "Making global tags..."
 	@cd .. ; rm -f GPATH GRTAGS GTAGS
 	@cd .. ; find . -name \*.h -o -name \*.c -o -name \*.cpp | grep -v moc_ | gtags -f -
+
+cleanall: clean
+	@echo "Removing old moc and .o files missed by 'clean'..."
+	@find .. -name moc_* -o -name *.o | xargs rm
