configure: Add back enable-sdl option and building of mythffplay
configure refactor had removed the enable-sdl option, but this is used
in the deb package build.

Refs #13259

--- a/mythtv/external/FFmpeg/fftools/Makefile
+++ b/mythtv/external/FFmpeg/fftools/Makefile
@@ -40,10 +40,18 @@ all: $(AVPROGS)
 fftools/ffprobe.o fftools/cmdutils.o: libavutil/ffversion.h | fftools
 OBJDIRS += fftools
 
-${MYTHPROGS}:
+# ${MYTHPROGS}:
+mythffmpeg:
 	cp ffmpeg_g mythffmpeg
+
+mythffprobe:
 	cp ffprobe_g mythffprobe
+
+mythffserver:
 	cp ffserver_g mythffserver
+
+mythffplay:
+	cp ffplay_g mythffplay
 
 ifdef AVPROGS
 install: install-mythprogs
