ExternalStreamHandler: Update description after every channel change.

--- a/mythtv/programs/mythexternrecorder/external-ffmpeg.conf
+++ b/mythtv/programs/mythexternrecorder/external-ffmpeg.conf
@@ -5,7 +5,9 @@
 command=/opt/ffmpeg/bin/ffmpeg -hide_banner -nostats -loglevel panic -re -i \"%URL%\" -c:v copy -c:a copy -f mpegts -
 
 # Used in logging events
-desc=ffmpeg \"%URL%\" \"%CHANNUM%\" \"%CHANNAME%\" \"%CALLSIGN%\"
+#desc=ffmpeg \"%URL%\" \"%CHANNUM%\" \"%CHANNAME%\" \"%CALLSIGN%\"
+desc=ffmpeg \"%CHANNAME%\"
+
 
 [TUNER]
 # An optional CONF file which provides channel details.  If it does not
