--- a/mythtv/programs/mythexternrecorder/external-vlc.conf
+++ b/mythtv/programs/mythexternrecorder/external-vlc.conf
@@ -5,7 +5,8 @@
 command="cvlc \"%URL%\" --sout \"#std{mux=ts,access=file,dst=-}\""
 
 # Used in logging events, %ARG% are replaced from the channel info
-desc=cvlc \"%URL%\" \"%CHANNUM%\" \"%CHANNAME%\" \"%CALLSIGN%\"
+#desc=cvlc \"%URL%\" \"%CHANNUM%\" \"%CHANNAME%\" \"%CALLSIGN%\"
+desc=cvlc \"%CHANNAME%\"
 
 [TUNER]
 # An optional CONF file which provides channel details.  If it does not
