--- a/mythtv/programs/mythexternrecorder/external-twitch.conf
+++ b/mythtv/programs/mythexternrecorder/external-twitch.conf
@@ -6,7 +6,8 @@
 command="/usr/bin/youtube-dl --hls-use-mpegts --ffmpeg-location /opt/ffmpeg/bin --external-downloader-args \"-hide_banner -nostats -loglevel panic -re\" -o - \"%URL%\""
 
 # Used in logging events, %ARG% are replaced from the channel info
-desc=Twitch \"%URL%\" \"%CHANNUM%\" \"%CHANNAME%\" \"%CALLSIGN%\"
+#desc=Twitch \"%URL%\" \"%CHANNUM%\" \"%CHANNAME%\" \"%CALLSIGN%\"
+desc=Twitch \"%CHANNAME%\"
 
 [TUNER]
 # An optional CONF file which provides channel details.  If it does not
