Playback: NVDEC decoding
NVDEC decoding for NVidia graphics adapters. This does not yet support
GPU to Video direct rendering. It works for video up to 4K but not
4K at 50fps. It also includes support for GPU based deinterlace.

Refs #13357

--- a/mythtv/external/Makefile
+++ b/mythtv/external/Makefile
@@ -13,8 +13,8 @@ endif
 SUBDIRS_ALL = $(addsuffix -all, ${SUBDIRS})
 SUBDIRS_INSTALL = $(addsuffix -install, ${SUBDIRS})
 SUBDIRS_UNINSTALL = $(addsuffix -uninstall, ${SUBDIRS})
-SUBDIRS_CLEAN = $(addsuffix -clean, ${SUBDIRS})
-SUBDIRS_DISTCLEAN = $(addsuffix -distclean, ${SUBDIRS})
+SUBDIRS_CLEAN = $(addsuffix -clean, ${SUBDIRS}, nv-codec-headers)
+SUBDIRS_DISTCLEAN = $(addsuffix -distclean, ${SUBDIRS}, nv-codec-headers)
 
 default:	all
 all:		${SUBDIRS_ALL}
@@ -41,3 +41,6 @@ libmythsoundtouch-all libmythsoundtouch-clean libmythsoundtouch-distclean libmyt
 
 libXNVCtrl-all libXNVCtrl-install libXNVCtrl-uninstall libXNVCtrl-clean libXNVCtrl-distclean:
 	${MAKE} -C libXNVCtrl -f Makefile.lib ${@:libXNVCtrl-%=%}
+
+nv-codec-headers-clean nv-codec-headers-distclean:
+	rm -rf nv-codec-headers/install nv-codec-headers/ffnvcodec.pc
